<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/lin_lay"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="@drawable/mainbackground">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/orange"
        android:textSize="@dimen/xlarge"
        android:textAlignment="center"
        android:layout_marginTop="40dp"
        android:text="@string/signup2_text1" />
    <ImageView
        android:id="@+id/splash"
        android:layout_width="130dp"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0"
        android:baselineAlignBottom="true"
        android:src="@drawable/paypal_icon" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/orange"
        android:textSize="@dimen/xlarge"
        android:textAlignment="center"
        android:text="@string/signup2_text2" />
    <EditText
        android:id="@+id/editText"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.1"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/signup2_text3"
        android:backgroundTint="@color/gray"
        android:textSize="@dimen/medium"
        android:textColor="@color/white"
        android:textColorHint="@color/white"/>
    <EditText
        android:id="@+id/editText2"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.1"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/signup2_text4"
        android:backgroundTint="@color/gray"
        android:textSize="@dimen/medium"
        android:textColor="@color/white"
        android:textColorHint="@color/white"/>
    <EditText
        android:id="@+id/editText3"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.1"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/signup2_text5"
        android:backgroundTint="@color/gray"
        android:textSize="@dimen/medium"
        android:textColor="@color/white"
        android:textColorHint="@color/white"/>
    <EditText
        android:id="@+id/editText4"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.1"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/signup2_text6"
        android:backgroundTint="@color/gray"
        android:textSize="@dimen/medium"
        android:textColor="@color/white"
        android:layout_marginBottom="20dp"
        android:textColorHint="@color/white"/>
    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup2_text7"
            android:textColor="@color/orange"
            android:textSize="@dimen/small" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup2_text8"
            android:textColor="@color/white"
            android:textSize="@dimen/small" />

    </LinearLayout>
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup2_text9"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:textSize="@dimen/small" />
    <Button
        android:id="@+id/button"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/signup2_text10"
        android:background="@drawable/btn_primary"
        android:layout_marginTop="10dp"
        android:textColor="@color/orange"
        android:textSize="@dimen/medium"
        android:onClick="gotologin"
        android:layout_weight="0.01" />

    <RadioGroup
        android:id="@+id/page_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/page1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/page2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"  />

    </RadioGroup>
</LinearLayout>