<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/lin_lay"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="@drawable/mainbackground">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/orange"
        android:textSize="@dimen/xxlarge"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"

        android:text="@string/signup_text1" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.1"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/signup_text2"
        android:backgroundTint="@color/gray"
        android:textSize="@dimen/medium"
        android:textColor="@color/white"
        android:textColorHint="@color/white"/>
    <EditText
        android:id="@+id/editText2"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.1"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/signup_text3"
        android:backgroundTint="@color/gray"
        android:textSize="@dimen/medium"
        android:textColor="@color/white"
        android:textColorHint="@color/white"/>
    <EditText
        android:id="@+id/editText3"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.1"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/signup_text4"
        android:backgroundTint="@color/gray"
        android:textSize="@dimen/medium"
        android:textColor="@color/white"
        android:textColorHint="@color/white"/>
    <EditText
        android:id="@+id/editText4"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.1"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/signup_text5"
        android:backgroundTint="@color/gray"
        android:textSize="@dimen/medium"
        android:textColor="@color/white"
        android:textColorHint="@color/white"/>
    <EditText
        android:id="@+id/editText5"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.1"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/signup_text6"
        android:backgroundTint="@color/gray"
        android:textSize="@dimen/medium"
        android:textColor="@color/white"
        android:textColorHint="@color/white"/>
    <Button
        android:id="@+id/button"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/signup_text7"
        android:background="@drawable/btn_primary"
        android:layout_marginTop="10dp"
        android:textColor="@color/orange"
        android:textSize="@dimen/medium"
        android:onClick="gotopaypal"
        android:layout_weight="0.01" />

    <RadioGroup
        android:id="@+id/page_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/page1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true" />

        <RadioButton
            android:id="@+id/page2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RadioGroup>
</LinearLayout>