<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/lin_lay"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="@drawable/mainbackground">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.12"
        android:background="@drawable/hback"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <ImageView
                android:padding="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_setup"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_weight="0.4"
                android:text="Active Session"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="22dp" />
            <ImageView
                android:padding="9dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_menu"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:text="John Doe"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14dp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.85"
        android:orientation="vertical">
        <fragment
            android:id="@+id/mapFragment"
            android:name="com.google.android.gms.maps.MapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.85" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lin_lay2"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/btnTaxi"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:text="@string/home_text1"
            android:background="@drawable/btn_primary"
            android:textColor="@color/white"
            android:textSize="@dimen/medium"
            android:layout_weight="0.35" />
        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:text="@string/home_text2"
            android:background="@drawable/btn_primary"
            android:textColor="@color/white"
            android:textSize="@dimen/medium"
            android:layout_weight="0.35" />
        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:text="@string/home_text3"
            android:background="@drawable/btn_primary"
            android:textColor="@color/white"
            android:textSize="@dimen/medium"
            android:layout_weight="0.3" />
    </LinearLayout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lin_lay3"
        android:orientation="horizontal"
        android:weightSum="1">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:id="@+id/v1"
            android:src="@drawable/v1"
            android:layout_gravity="center"
            android:layout_weight="0.3"
            android:layout_marginLeft="15dp"
            android:baselineAlignBottom="true"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:id="@+id/v2"
            android:src="@drawable/v2"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_weight="0.35"
            android:baselineAlignBottom="true"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:id="@+id/v3"
            android:src="@drawable/v3"
            android:layout_gravity="center"
            android:layout_weight="0.35"
            android:layout_marginLeft="10dp"
            android:baselineAlignBottom="true"/>
    </LinearLayout>


</LinearLayout>